--- a/InsecurePayAndroid/app/build.gradle
+++ b/InsecurePayAndroid/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -22,9 +23,13 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:design:23.0.1'
     compile files('libs/gson-2.5.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    androidTestCompile 'com.android.support.test:runner:0.4'
+    androidTestCompile 'com.android.support.test:rules:0.4'
     androidTestCompile 'org.mockito:mockito-core:2.0.42-beta'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+
 }
