--- a/InsecurePayAndroid/app/src/main/AndroidManifest.xml
+++ b/InsecurePayAndroid/app/src/main/AndroidManifest.xml
@@ -41,6 +41,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cigital.insecurepay.activity.LoginActivity" />
         </activity>
+        <activity
+            android:name=".activity.ForgotPassword"
+            android:label="@string/title_activity_forgot_password"
+            android:parentActivityName=".activity.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cigital.insecurepay.activity.LoginActivity" />
+        </activity>
     </application>
 
 </manifest>
