--- a/server/.elasticbeanstalk/config.yml
+++ b/server/.elasticbeanstalk/config.yml
@@ -3,7 +3,7 @@ branch-defaults:
     environment: insecurepay-dev-env
 global:
   application_name: InsecurePayServer
-  default_ec2_keyname: aws-eb-ssh
+  default_ec2_keyname: aws-eb-ssh-key
   default_platform: Tomcat 8 Java 8
   default_region: us-east-1
   profile: null
