Updated saved config

--- a/server/.elasticbeanstalk/saved_configs/insecurepay-dev-env-sc.cfg.yml
+++ b/server/.elasticbeanstalk/saved_configs/insecurepay-dev-env-sc.cfg.yml
@@ -18,7 +18,7 @@ OptionSettings:
     SystemType: enhanced
   aws:autoscaling:launchconfiguration:
     IamInstanceProfile: aws-elasticbeanstalk-ec2-role
-    EC2KeyName: aws-eb-ssh
+    EC2KeyName: aws-eb-ssh-key
     InstanceType: t2.micro
   aws:autoscaling:updatepolicy:rollingupdate:
     RollingUpdateType: Health
