--- a/InsecurePayAndroid/app/build.gradle
+++ b/InsecurePayAndroid/app/build.gradle
@@ -34,8 +34,10 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.1'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile 'com.android.support:support-v4:23.0.1'
+    compile 'joda-time:joda-time:2.9.2'
 }
