--- a/InsecurePayAndroid/app/src/main/AndroidManifest.xml
+++ b/InsecurePayAndroid/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -49,6 +50,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cigital.insecurepay.activity.LoginActivity" />
         </activity>
+        <activity
+            android:name=".activity.TransferActivity"
+            android:label="@string/title_activity_transfer"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
