--- a/InsecurePayAndroid/app/src/main/AndroidManifest.xml
+++ b/InsecurePayAndroid/app/src/main/AndroidManifest.xml
@@ -54,11 +54,12 @@
             android:name=".activity.TransferActivity"
             android:label="@string/title_activity_transfer"
             android:parentActivityName=".activity.HomePage"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar">
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value="com.cigital.insecurepay.activity.HomePage" />
+        </activity>
     </application>
 
 </manifest>
