--- a/InsecurePayAndroid/app/src/main/AndroidManifest.xml
+++ b/InsecurePayAndroid/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.LoginActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,6 +36,7 @@
         <activity
             android:name=".activity.HomePage"
             android:label="@string/title_activity_home_page"
+            android:screenOrientation="portrait"
             android:parentActivityName=".activity.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -44,6 +46,7 @@
         <activity
             android:name=".activity.ForgotPassword"
             android:label="@string/title_activity_forgot_password"
+            android:screenOrientation="portrait"
             android:parentActivityName=".activity.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -53,6 +56,7 @@
         <activity
             android:name=".activity.TransferActivity"
             android:label="@string/title_activity_transfer"
+            android:screenOrientation="portrait"
             android:parentActivityName=".activity.HomePage"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar">
