--- a/InsecurePayAndroid/app/build.gradle
+++ b/InsecurePayAndroid/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile 'com.android.support:support-v4:23.0.1'
     compile 'joda-time:joda-time:2.9.2'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
 }
