--- a/InsecurePayAndroid/app/src/main/AndroidManifest.xml
+++ b/InsecurePayAndroid/app/src/main/AndroidManifest.xml
@@ -16,15 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.LoginActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:name=".activity.SplashScreenActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.LoginActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
         <!--
              ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
@@ -36,8 +39,8 @@
         <activity
             android:name=".activity.HomePage"
             android:label="@string/title_activity_home_page"
-            android:screenOrientation="portrait"
             android:parentActivityName=".activity.LoginActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -46,8 +49,8 @@
         <activity
             android:name=".activity.ForgotPassword"
             android:label="@string/title_activity_forgot_password"
-            android:screenOrientation="portrait"
             android:parentActivityName=".activity.LoginActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -55,14 +58,14 @@
         </activity>
         <activity
             android:name=".activity.TransferActivity"
-            android:label="@string/title_activity_transfer"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".activity.HomePage"
             android:exported="true"
+            android:label="@string/title_activity_transfer"
+            android:parentActivityName=".activity.HomePage"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.cigital.insecurepay.activity.HomePage" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cigital.insecurepay.activity.HomePage" />
         </activity>
     </application>
 
