--- a/docker/dockerPostgres/Dockerfile
+++ b/docker/dockerPostgres/Dockerfile
@@ -1,28 +1,37 @@
-# Base: Alpine
 FROM alpine
 
-MAINTAINER  Amish <shah7@iu.edu>, Ankit <asadana@iu.edu>,  Jaini <voraj@iu.edu>, Janak <jbhalla@iu.edu>, Madhukiran <madhradh@iu.edu>
 
-
-# Run any commands
-RUN apk upgrade --update && \
-    apk add --update curl ca-certificates bash && \
-	apk update && apk add curl "postgresql@edge<9.6" "postgresql-contrib@edge<9.6" 
-
-# Expose port
-EXPOSE 5432
-
-ENV LANG en_US.utf8
+RUN echo "@edge http://nl.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories && \
+	apk add --update curl ca-certificates bash && \
+    apk update && apk add curl "postgresql@edge<9.6" "postgresql-contrib@edge<9.6" && \
+    mkdir docker-entrypoint-initdb.d && \
+    curl -o /usr/local/bin/gosu -sSL "https://github.com/tianon/gosu/releases/download/1.2/gosu-amd64" && \
+    chmod +x /usr/local/bin/gosu && \
+    apk del curl && \
+    rm -rf /var/cache/apk/*
+	
+ENV LANG en_US.UTF8
 ENV PGDATA /var/lib/postgresql/data
 VOLUME /var/lib/postgresql/data
 
+ENV POSTGRES_USERNAME insecurepay
+ENV POSTGRES_PASSWORD insecurepassword
+ENV POSTGRES_DATABASE insecurepaydatabase
+ENV SQL_FILE /home/temp/dbsetup.sql
+
+#EXPOSE PortNo
+EXPOSE 5432
+
+RUN mkdir -p /home/temp
 # Setting up a work dir
-WORKDIR /root/temp
+WORKDIR /home/temp/
 
 # Copy and run example script
-COPY ./postInstall.sh /root/temp
-RUN chmod +x /root/temp/postInstall.sh
-RUN /bin/bash /root/temp/postInstall.sh
+COPY ./docker-entrypoint.sh /home/temp
+COPY ./dbsetup.sql /home/temp
+# RUN chmod +x /home/temp/docker-entrypoint.sh
+ENTRYPOINT ["/home/temp/docker-entrypoint.sh"]
 
-#ERROR: 'postgresql-client-9.5 9.5.2-1.pgdg80+1' is not a valid dependency, format is name(@tag)([<>=]version)
-#9.5.2-1.pgdg80+1" && \
+CMD ["postgres"]
+
+
