Fixes to the docker postgres

--- a/docker/dockerPostgres/Dockerfile
+++ b/docker/dockerPostgres/Dockerfile
@@ -1,10 +1,10 @@
 FROM alpine
 
+MAINTAINER  Amish <shah7@iu.edu>, Ankit <asadana@iu.edu>,  Jaini <voraj@iu.edu>, Janak <jbhalla@iu.edu>, Madhukiran <madhradh@iu.edu>
 
 RUN echo "@edge http://nl.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories && \
 	apk add --update curl ca-certificates bash && \
     apk update && apk add curl "postgresql@edge<9.6" "postgresql-contrib@edge<9.6" && \
-    mkdir docker-entrypoint-initdb.d && \
     curl -o /usr/local/bin/gosu -sSL "https://github.com/tianon/gosu/releases/download/1.2/gosu-amd64" && \
     chmod +x /usr/local/bin/gosu && \
     apk del curl && \
@@ -19,19 +19,17 @@ ENV POSTGRES_PASSWORD insecurepassword
 ENV POSTGRES_DATABASE insecurepaydatabase
 ENV SQL_FILE /home/temp/dbsetup.sql
 
-#EXPOSE PortNo
+# Open port
 EXPOSE 5432
 
-RUN mkdir -p /home/temp
 # Setting up a work dir
+RUN mkdir -p /home/temp
 WORKDIR /home/temp/
 
 # Copy and run example script
 COPY ./docker-entrypoint.sh /home/temp
 COPY ./dbsetup.sql /home/temp
-# RUN chmod +x /home/temp/docker-entrypoint.sh
+RUN chmod +x /home/temp/docker-entrypoint.sh
 ENTRYPOINT ["/home/temp/docker-entrypoint.sh"]
 
 CMD ["postgres"]
-
-
