Installing tomcat and copying server war #105

--- a/docker/dockerTomcat/Dockerfile
+++ b/docker/dockerTomcat/Dockerfile
@@ -12,6 +12,9 @@ ENV JAVA_VERSION_MINOR 77
 ENV JAVA_VERSION_BUILD 03
 ENV JAVA_PACKAGE       jre
 ENV JAVA_SHA256_SUM    edd9db13e81913d8758263eb5e923cbe854d24c1d47a61a7d62064a7dba5255f
+# Tomcat Version
+ENV TOMCAT_VERSION_MAJOR 8
+ENV TOMCAT_VERSION_FULL  8.0.33
 
 # Download and install glibc
 RUN apk add --update curl && \
