Updated dockers with more comments

--- a/docker/dockerPostgres/Dockerfile
+++ b/docker/dockerPostgres/Dockerfile
@@ -17,12 +17,15 @@ ENV LANG en_US.UTF8
 ENV PGDATA /var/lib/postgresql/data
 VOLUME /var/lib/postgresql/data
 
+# These variables are used to create tables and setup the database
+# To link to the tomcat server, these values have been hardcoded in the war file
+# For any alterations, the InsecurePayServiceServer war would have to be recompiled
 ENV POSTGRES_USERNAME insecurepay
 ENV POSTGRES_PASSWORD insecurepassword
 ENV POSTGRES_DATABASE insecurepaydatabase
 ENV SQL_FILE /home/temp/dbsetup.sql
 
-# Open port
+# Expose internal docker port
 EXPOSE 5432
 
 # Setting up a work dir
@@ -30,6 +33,8 @@ RUN mkdir -p /home/temp
 WORKDIR /home/temp/
 
 # Copy entrypoint script and dbsetup.sql
+# docker-psql-entrypoint.sh contains the setup for the database
+# dbsetup.sql contains the setup for the tables and populating values
 COPY ./docker-psql-entrypoint.sh /home/temp
 COPY ./dbsetup.sql /home/temp
 
