--- a/InsecurePayAndroid/app/build.gradle
+++ b/InsecurePayAndroid/app/build.gradle
@@ -2,9 +2,16 @@ apply plugin: 'com.android.application'
 apply from: 'jacoco.gradle'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'InsecurePayKey'
+            keyPassword 'insecurepay'
+            storeFile file('/home/ankit/workspace/insecurepay-keystore/insecurepay-keystore.jks')
+            storePassword 'insecurepay'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
     defaultConfig {
         applicationId "com.cigital.insecurepay"
         minSdkVersion 17
@@ -15,7 +22,6 @@ android {
         // Enabling multidex support.
         multiDexEnabled true
     }
-
     lintOptions {
         // if true, stop the gradle build if errors are found
         abortOnError false
@@ -28,17 +34,36 @@ android {
         htmlReport true
         htmlOutput file("$project.projectDir/../reports/lint/lint-result-" + getDate() + ".html")
     }
-
-
-
     buildTypes {
         debug {
+            applicationIdSuffix ".debug"
             // For running coverage reports on debug builds
             testCoverageEnabled = true
         }
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            shrinkResources true
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    productFlavors {
+        pro {
+            minSdkVersion 17
+            applicationId 'com.cigital.insecurepay'
+            proguardFile 'somerules'
+            signingConfig signingConfigs.config
+            targetSdkVersion 23
+            versionCode 1
+            versionName '1.0'
+        }
+        free {
+            minSdkVersion 17
+            applicationId 'com.cigital.insecurepay'
+            signingConfig signingConfigs.config
+            targetSdkVersion 23
+            versionCode 1
+            versionName '1.0'
         }
     }
 
